@startuml

class Character{
    -character:char
    -characterProperty:CharacterProperties
    +Character(char character, CharacterProperties characterProperty)
    +setCharacter(char character):void
    +setCharacterProperty(CharacterProperties characterProperty):void
    +getCharacter():char
    +getFont():String
    +getColor():String
    +getSize():int
}

class CharacterProperties{
    -font:String
    -color:String
    -size:int
    +CharacterProperties(String font, String color, int size)
    +getFont():String
    +getColor():String
    +getSize():int
}

class CharacterPropertiesFactory { 

    -flyweights:Map<String, CharacterProperties>
    +setAndRetrieveFlyweightCharacterProperties(String font, String color, int size):CharacterProperties 
    +sizeOfMap():int
} 

class Document { 

    -characters:List<Character>
    -propertiesFactory:CharacterPropertiesFactory
    +addCharacter(char c, String font, String color, int size):void  
    +editCharacterProperties(int index, String font, String color, int size  ):void
    +saveToFile(String filename):void 
    +loadFromFile(String filename):void
} 

Document --* Character
Character --o CharacterProperties
CharacterPropertiesFactory --o CharacterProperties

@enduml
